# video-to-audio

./: .gitignore  CLAUDE.md  LICENSE  README.md  mp4tomp3.py  pyproject.toml  windows_run.bat
src/: __init__.py  converter.py  exceptions.py  main.py  utils.py
tests/: test_converter.py  test_exceptions.py  test_main.py  test_utils.py
